--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,7 @@ jobs:
             git checkout main
             git reset --hard origin/main
             git clean -df
+            git pull origin main
 
             echo "🧹 Cleaning old builds..."
 
