--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,12 +32,13 @@ jobs:
             if [ ! -d ".git" ]; then
               git clone git@github.com:speedway-solutions-ltd/ssl-invoice-management-system.git .
             fi
+            cd /ssl-invoice-management-system || exit 1
             git remote set-url origin git@github.com:speedway-solutions-ltd/ssl-invoice-management-system.git
             git fetch origin main
             git checkout main
             git reset --hard origin/main
             git clean -df
-            git pull origin main
+            # git pull origin main
 
             echo "🧹 Cleaning old builds..."
 
