--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
             git checkout main
             git reset --hard origin/main
             git clean -df
-            # git pull origin main
+            git pull origin main
 
             echo "🧹 Cleaning old builds..."
 
